--- a/src/pages/Sign-in/index.module.css
+++ b/src/pages/Sign-in/index.module.css
@@ -20,7 +20,13 @@
 .txt_login {
     font-family: "Jost", sans-serif;
     font-weight: 600;
-    font-size: 2.5rem;
+    font-size: 2rem;
+}
+
+.txt_login1 {
+    font-family: "Jost", sans-serif;
+    width: 70%;
+    text-align: center;
 }
 
 .div_info {
@@ -32,14 +38,14 @@
     justify-content: space-around;
 }
 
-.txt_ttl{
+.txt_ttl {
     font-family: "Jost", sans-serif;
     font-weight: 600;
     font-size: 2.5rem;
     color: white;
 }
 
-.txt_info{
+.txt_info {
     width: 90%;
     font-family: "Jost", sans-serif;
     text-align: center;
@@ -58,10 +64,10 @@
     border-radius: 10px;
 }
 
-.txt_sign_up{
+.txt_sign_up {
     font-family: "Jost", sans-serif;
 }
 
-.txt_sign_up a{
+.txt_sign_up a {
     text-decoration: none;
 }
