--- a/src/pages/Sign-in/_components/Form/index.module.css
+++ b/src/pages/Sign-in/_components/Form/index.module.css
@@ -37,10 +37,25 @@ form {
     font-family: "Jost", sans-serif;
     font-size: 1rem;
     font-weight: 500;
-    padding: 7px 15px;
+    padding: 7px 25px;
     border: 1px black solid;
     background-color: white;
     border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 0px 0px 10px #d5d5d5;
+    transition: 200ms;
+}
+
+.btn_submit:hover {
+    min-width: 80px;
+    font-size: 1rem;
+    border: 1px white solid;
+    background-color: rgb(29, 29, 29);
+    color: white;
+    border-radius: 5px;
+    padding: 7px 25px;
+    font-family: "Jost", sans-serif;
+    font-weight: 500;
     cursor: pointer;
     box-shadow: 0px 0px 10px #d5d5d5;
 }
