--- a/src/pages/Sign-up/_components/Form/index.module.css
+++ b/src/pages/Sign-up/_components/Form/index.module.css
@@ -43,4 +43,19 @@ form {
     border-radius: 5px;
     cursor: pointer;
     box-shadow: 0px 0px 10px #d5d5d5;
+    transition: 200ms;
+}
+
+.btn_submit:hover {
+    min-width: 80px;
+    font-size: 1rem;
+    border: 1px white solid;
+    background-color: rgb(29, 29, 29);
+    color: white;
+    border-radius: 5px;
+    padding: 7px 15px;
+    font-family: "Jost", sans-serif;
+    font-weight: 500;
+    cursor: pointer;
+    box-shadow: 0px 0px 10px #d5d5d5;
 }
