--- a/src/pages/Sign-up/index.module.css
+++ b/src/pages/Sign-up/index.module.css
@@ -40,10 +40,18 @@
     border-radius: 10px;
 }
 
-.txt_sign_up{
+.txt_sign_up {
     font-family: "Jost", sans-serif;
+    font-weight: 500;
 }
 
-.txt_sign_up a{
+.txt_sign_up a {
     text-decoration: none;
+    color: #3483fa;
+    transition: 200ms;
+}
+
+.txt_sign_up a:hover {
+    text-decoration: none;
+    color: #0d4395;
 }
