--- a/src/pages/Dashboard/index.module.css
+++ b/src/pages/Dashboard/index.module.css
@@ -28,6 +28,10 @@
 }
 
 .btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
     border: 1px black solid;
     border-radius: 5px;
     padding: 10px 30px;
@@ -38,6 +42,9 @@
 }
 
 .btn:hover {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border: 1px white solid;
     background-color: rgb(29, 29, 29);
     color: white;
