--- a/src/components/Notification/index.module.css
+++ b/src/components/Notification/index.module.css
@@ -19,9 +19,7 @@
 .main {
     border-radius: 5px;
     margin: 10px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-right: 10px;
+    padding: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -31,10 +29,4 @@
     font-family: "Jost", sans-serif;
     font-weight: 500;
     animation: spaw 300ms linear;
-}
-
-.color {
-    width: 2px;
-    height: 100%;
-    background-color: green;
 }
