--- a/src/pages/Sign-up/_components/Form/index.module.css
+++ b/src/pages/Sign-up/_components/Form/index.module.css
@@ -18,6 +18,33 @@ form {
     width: 100%;
 }
 
+.input_div {
+    display: flex;
+    width: 100%;
+    border: 1px black solid;
+    border-radius: 3px;
+    box-shadow: 0px 0px 10px #d5d5d5;
+}
+
+.input_div input {
+    width: 100%;
+    height: 35px;
+    display: flex;
+    border: none;
+    padding-left: 10px;
+    border-radius: 3px;
+}
+
+.input_div button {
+    border: none;
+    background-color: white;
+    cursor: pointer;
+    border-radius: 3px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .label {
     font-family: "Jost", sans-serif;
     font-weight: 500;
