--- a/src/components/Notification/index.module.css
+++ b/src/components/Notification/index.module.css
@@ -1,17 +1,21 @@
-@keyframes spaw{
-    0%{
+@keyframes spaw {
+    0% {
         transform: translateY(-100%);
     }
-    25%{
+
+    25% {
         transform: translateY(-75%);
     }
-    50%{
+
+    50% {
         transform: translateY(-50%);
     }
-    75%{
+
+    75% {
         transform: translateY(-25%);
     }
-    100%{
+
+    100% {
         transform: translateY(0%);
     }
 }
@@ -29,4 +33,44 @@
     font-family: "Jost", sans-serif;
     font-weight: 500;
     animation: spaw 300ms linear;
+}
+
+@media screen and (min-width: 425px) and (max-width: 768px) {
+
+    .main {
+        border-radius: 5px;
+        margin: 10px;
+        padding: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+        background-color: white;
+        box-shadow: 0px 0px 10px #CECECE;
+        font-family: "Jost", sans-serif;
+        font-weight: 500;
+        animation: spaw 300ms linear;
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 425px) {
+
+    .main {
+        border-radius: 5px;
+        margin: 10px;
+        padding: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+        background-color: white;
+        box-shadow: 0px 0px 10px #CECECE;
+        font-family: "Jost", sans-serif;
+        font-weight: 500;
+        animation: spaw 300ms linear;
+        text-align: center;
+    }
 }
