--- a/src/pages/Dashboard/index.module.css
+++ b/src/pages/Dashboard/index.module.css
@@ -50,6 +50,10 @@
     color: white;
 }
 
+.img{
+    width: 400px;
+}
+
 .btn {
     display: flex;
     align-items: center;
@@ -76,4 +80,59 @@
     font-family: "Jost", sans-serif;
     font-weight: 500;
     cursor: pointer;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+
+    .div_center {
+        position: absolute;
+        width: 90%;
+        height: 90%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        border-radius: 10px;
+        box-shadow: 0px 0px 10px #CECECE;
+        background: linear-gradient(45deg, #3AAEA1, #3DB498, #3DB498, #4CBE9A);
+        animation: loading 300ms linear;
+    }
+}
+
+@media screen and (min-width: 425px) and (max-width: 768px) {
+
+    .div_center {
+        position: absolute;
+        width: 90%;
+        height: 90%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        border-radius: 10px;
+        box-shadow: 0px 0px 10px #CECECE;
+        background: linear-gradient(45deg, #3AAEA1, #3DB498, #3DB498, #4CBE9A);
+        animation: loading 300ms linear;
+    }
+}
+
+@media screen and (max-width: 424px) {
+
+    .div_center {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        border-radius: 0px;
+        box-shadow: 0px 0px 10px #CECECE;
+        background: linear-gradient(45deg, #3AAEA1, #3DB498, #3DB498, #4CBE9A);
+        animation: none;
+    }
+
+    .img{
+        width: 80%;
+    }
 }
