--- a/src/pages/Sign-in/index.module.css
+++ b/src/pages/Sign-in/index.module.css
@@ -85,3 +85,83 @@
     right: 0%;
     z-index: 1;
 }
+
+@media screen and (min-width: 768px) and (max-width: 1124px) {
+
+    .div_center {
+        position: absolute;
+        width: 90%;
+        height: 85%;
+        display: flex;
+        border-radius: 10px;
+        box-shadow: 0px 0px 10px #CECECE;
+        background: linear-gradient(45deg, #3AAEA1, #3DB498, #3DB498, #4CBE9A);
+        animation: loading 300ms linear;
+    }
+}
+
+@media screen and (min-width: 425px) and (max-width: 768px) {
+
+    .div_center {
+        position: absolute;
+        width: 95%;
+        height: 95%;
+        display: flex;
+        border-radius: 10px;
+        box-shadow: 0px 0px 10px #CECECE;
+        background: linear-gradient(45deg, #3AAEA1, #3DB498, #3DB498, #4CBE9A);
+        animation: loading 300ms linear;
+    }
+
+    .div_login {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        background-color: white;
+        border-radius: 10px;
+    }
+
+    .notification_container {
+        position: absolute;
+        width: 400px;
+        top: 13%;
+        left: 50%;
+        right: 0%;
+        transform: translate(-50%, -50%);
+        z-index: 1;
+    }
+}
+
+@media screen and (max-width: 425px) {
+
+    .div_center {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        border-radius: 0px;
+        box-shadow: 0px 0px 10px #CECECE;
+        background: linear-gradient(45deg, #3AAEA1, #3DB498, #3DB498, #4CBE9A);
+        animation: loading 300ms linear;
+    }
+
+    .div_login {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        background-color: white;
+        border-radius: 0px;
+    }
+
+    .txt_sign_up {
+        font-size: 0.9rem;
+        font-family: "Jost", sans-serif;
+        font-weight: 500;
+    }
+}
