--- a/src/pages/Sign-up/_components/Info/Info.module.css
+++ b/src/pages/Sign-up/_components/Info/Info.module.css
@@ -1,4 +1,4 @@
-.div_info {
+.main {
     width: 40%;
     height: 100%;
     display: flex;
@@ -20,4 +20,49 @@
     text-align: center;
     font-size: 1.2rem;
     color: white;
+}
+
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+
+    .txt_ttl {
+        font-family: "Jost", sans-serif;
+        font-weight: 600;
+        font-size: 2rem;
+        color: white;
+    }
+
+    .txt_info {
+        width: 90%;
+        font-family: "Jost", sans-serif;
+        text-align: center;
+        font-size: 1rem;
+        color: white;
+    }
+}
+
+
+@media screen and (min-width: 425px) and (max-width: 768px) {
+
+    .main {
+        display: none;
+        width: 40%;
+        height: 100%;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+    }
+}
+
+
+@media screen and (max-width: 425px) {
+
+    .main {
+        display: none;
+        width: 40%;
+        height: 100%;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+    }
 }
