--- a/src/pages/Sign-up/index.module.css
+++ b/src/pages/Sign-up/index.module.css
@@ -78,3 +78,73 @@
     text-decoration: none;
     color: #0d4395;
 }
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+
+    .div_center {
+        position: absolute;
+        width: 90%;
+        height: 85%;
+        display: flex;
+        border-radius: 10px;
+        box-shadow: 0px 0px 10px #CECECE;
+        background: linear-gradient(45deg, #3AAEA1, #3DB498, #3DB498, #4CBE9A);
+        animation: loading 300ms linear;
+    }
+}
+
+@media screen and (min-width: 425px) and (max-width: 768px) {
+
+    .div_center {
+        position: absolute;
+        width: 95%;
+        height: 95%;
+        display: flex;
+        border-radius: 10px;
+        box-shadow: 0px 0px 10px #CECECE;
+        background: linear-gradient(45deg, #3AAEA1, #3DB498, #3DB498, #4CBE9A);
+        animation: loading 300ms linear;
+    }
+
+    .div_login {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        background-color: white;
+        border-radius: 10px;
+    }
+}
+
+@media screen and (max-width: 425px) {
+
+    .div_center {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        border-radius: 0px;
+        box-shadow: 0px 0px 10px #CECECE;
+        background: linear-gradient(45deg, #3AAEA1, #3DB498, #3DB498, #4CBE9A);
+        animation: loading 300ms linear;
+    }
+
+    .div_login {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        background-color: white;
+        border-radius: 0px;
+    }
+
+    .txt_sign_up {
+        font-size: 0.9rem;
+        font-family: "Jost", sans-serif;
+        font-weight: 500;
+    }
+}
