--- a/src/pages/Sign-in/index.module.css
+++ b/src/pages/Sign-in/index.module.css
@@ -86,7 +86,7 @@
     z-index: 1;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1124px) {
+@media (min-width: 768px) and (max-width: 1124px) {
 
     .div_center {
         position: absolute;
@@ -100,7 +100,7 @@
     }
 }
 
-@media screen and (min-width: 480px) and (max-width: 768px) {
+@media (min-width: 480px) and (max-width: 768px) {
 
     .div_center {
         position: absolute;
@@ -135,7 +135,7 @@
     }
 }
 
-@media screen and (max-width: 480px) {
+@media (max-width: 480px) {
 
     .div_center {
         position: absolute;
