--- a/src/components/Notification/index.module.css
+++ b/src/components/Notification/index.module.css
@@ -35,7 +35,7 @@
     animation: spaw 300ms linear;
 }
 
-@media screen and (min-width: 480px) and (max-width: 768px) {
+@media (min-width: 480px) and (max-width: 768px) {
 
     .main {
         border-radius: 5px;
@@ -55,7 +55,7 @@
     }
 }
 
-@media screen and (max-width: 480px) {
+@media (max-width: 480px) {
 
     .main {
         border-radius: 5px;
