--- a/src/pages/Dashboard/index.module.css
+++ b/src/pages/Dashboard/index.module.css
@@ -82,7 +82,7 @@
     cursor: pointer;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1024px) {
+@media (min-width: 768px) and (max-width: 1024px) {
 
     .div_center {
         position: absolute;
@@ -99,7 +99,7 @@
     }
 }
 
-@media screen and (min-width: 480px) and (max-width: 768px) {
+@media (min-width: 480px) and (max-width: 768px) {
 
     .div_center {
         position: absolute;
@@ -116,7 +116,7 @@
     }
 }
 
-@media screen and (max-width: 480px) {
+@media (max-width: 480px) {
 
     .div_center {
         position: absolute;
