--- a/src/pages/Sign-in/_components/Info/Info.module.css
+++ b/src/pages/Sign-in/_components/Info/Info.module.css
@@ -22,7 +22,7 @@
     color: white;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1024px) {
+@media (min-width: 768px) and (max-width: 1024px) {
 
     .txt_ttl {
         font-family: "Jost", sans-serif;
@@ -41,7 +41,7 @@
 }
 
 
-@media screen and (min-width: 480px) and (max-width: 768px) {
+@media (min-width: 480px) and (max-width: 768px) {
 
     .main {
         display: none;
@@ -54,7 +54,7 @@
 }
 
 
-@media screen and (max-width: 480px) {
+@media (max-width: 480px) {
 
     .main {
         display: none;
