--- a/src/pages/Sign-up/index.module.css
+++ b/src/pages/Sign-up/index.module.css
@@ -79,7 +79,7 @@
     color: #0d4395;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1024px) {
+@media (min-width: 768px) and (max-width: 1024px) {
 
     .div_center {
         position: absolute;
@@ -93,7 +93,7 @@
     }
 }
 
-@media screen and (min-width: 480px) and (max-width: 768px) {
+@media (min-width: 480px) and (max-width: 768px) {
 
     .div_center {
         position: absolute;
@@ -118,7 +118,7 @@
     }
 }
 
-@media screen and (max-width: 480px) {
+@media (max-width: 480px) {
 
     .div_center {
         position: absolute;
