--- a/src/pages/Sign-in/index.module.css
+++ b/src/pages/Sign-in/index.module.css
@@ -140,7 +140,7 @@
     .div_center {
         position: absolute;
         width: 100%;
-        height: 100%;
+        height: 100vh;
         display: flex;
         border-radius: 0px;
         box-shadow: 0px 0px 10px #CECECE;
