--- a/src/pages/Dashboard/index.module.css
+++ b/src/pages/Dashboard/index.module.css
@@ -60,6 +60,7 @@
     justify-content: center;
     gap: 5px;
     border: 1px black solid;
+    color: black;
     border-radius: 5px;
     padding: 10px 30px;
     font-family: "Jost", sans-serif;
@@ -120,8 +121,8 @@
 
     .div_center {
         position: absolute;
-        width: 100%;
-        height: 100%;
+        width: 100vw;
+        height: 100vh;
         display: flex;
         flex-direction: column;
         align-items: center;
