--- a/src/pages/Sign-in/index.module.css
+++ b/src/pages/Sign-in/index.module.css
@@ -139,7 +139,7 @@
 
     .div_center {
         position: absolute;
-        width: 100%;
+        width: 100vw;
         height: 100vh;
         display: flex;
         border-radius: 0px;
