--- a/src/pages/Sign-up/_components/Form/index.module.css
+++ b/src/pages/Sign-up/_components/Form/index.module.css
@@ -67,6 +67,7 @@ form {
     padding: 7px 15px;
     border: 1px black solid;
     background-color: white;
+    color: black;
     border-radius: 5px;
     cursor: pointer;
     box-shadow: 0px 0px 10px #d5d5d5;
