--- a/src/pages/Sign-up/index.module.css
+++ b/src/pages/Sign-up/index.module.css
@@ -122,8 +122,8 @@
 
     .div_center {
         position: absolute;
-        width: 100%;
-        height: 100%;
+        width: 100vw;
+        height: 100vh;
         display: flex;
         border-radius: 0px;
         box-shadow: 0px 0px 10px #CECECE;
